# homeworkweb_2

./: AddressBook.py  Birthday.py  Bot.py  Dockerfile  Email.py  Field.py  Name.py  Note.py  Phone.py  Record.py  Status.py  __main__.py  logs.txt  pyproject.toml
