[tool.poetry]
name = "homework-web2"
version = "0.1.0"
description = ""
authors = ["Alena-Mishchenko <131773665+Alena-Mishchenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
